10072 ip: timeout takes void (*)(void *) as callback Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Norm Jacobs <naj@snapcon.com> Approved by: Dan McDonald <danmcd@joyent.com>